# course_work6

./: .env.py  README.md  data.json  data_users.json  data_vlog.json  pyproject.toml
config/: settings.py  urls.py
mailing_list/management/: __init__.py
mailing_list/migrations/: 0001_initial.py  0002_client_created_client_is_active.py  0003_alter_client_created.py  0004_alter_client_created.py  0005_alter_client_options.py  0006_rename_created_mailinglistmessage_created_time.py  0007_mailinglist_created.py  0008_mailinglistmessage_created.py
mailing_list/templates/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing_list/templates/mailing_list/: client_confirm_delete.html  client_form.html  client_list.html  index.html  mailinglist_list.html  mailinglistmessage_list.html
mailing_list/templates/mailing_list/includes/: inc_catalog_head.html
users/: models.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py
vlog/: apps.py  models.py  sevices.py  views.py
vlog/migrations/: 0001_initial.py
vlog/templates/vlog/: record_confirm_delete.html  record_detail.html  record_form.html  record_list.html
vlog/templates/vlog/includes/: inc_record_card.html
vlog/templatetags/: mediapath.py
