[tool.poetry]
name = "06-course-work"
version = "0.1.0"
description = ""
authors = ["Ekaterina_N <nathovaekaterina@gmail.com>"]
readme = "README.md"
packages = [{include = "06_course_work"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.6"
ipython = "^8.14.0"
redis = "^4.6.0"
crontab = "^1.0.1"
django-crontab = "^0.7.1"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
